syntax = "proto3";
package pylons;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

// EntriesList is a struct to keep list of items and coins
message EntriesList {
  repeated CoinOutput CoinOutputs = 1;
  repeated ItemOutput ItemOutputs = 2;
  repeated ItemModifyOutput ItemModifyOutputs = 3;
}

message CoinInputList {
  repeated CoinInput coins = 1;
}

message CoinInput {
  string Coin = 1;
  int64 Count = 2;
}

message CoinOutput{
  string ID = 1;
  string Coin = 2;
  string Count = 3;
}

message SemVer {
  string number = 1;
}

message Level {
  int64 number = 1;
}

message Email {
  string str = 1;
}

// DoubleInputParam describes the bounds on an item input/output parameter of type float64
message DoubleInputParam {
  string Key = 1;
  // The minimum legal value of this parameter.
  string MinValue = 2 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  // The maximum legal value of this parameter.
  string  MaxValue = 3 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
}

message DoubleInputParamList {
  repeated DoubleInputParam params = 1 [(gogoproto.nullable) = false];
}

// DoubleWeightRange describes weight range that produce double value
message DoubleWeightRange {
  string Lower = 1 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];// This is added due to amino.Marshal does not support float variable
  string Upper = 2 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  int64 Weight = 3;
}

message DoubleWeightTable  {
  repeated DoubleWeightRange WeightRanges = 1 [(gogoproto.nullable) = false];
}

// LongParam describes the bounds on an item input/output parameter of type int64
message LongParam {
  string Key = 1;
  // The likelihood that this parameter is applied to the output item. Between 0.0 (exclusive) and 1.0 (inclusive).
  string Rate = 2 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  IntWeightTable WeightTable = 3 [(gogoproto.nullable) = false];
  // When program is not empty, IntWeightTable is ignored
  string Program = 4;
}
// LongParamList is a list of LongParam
message LongParamList {
  repeated LongParam params = 1 [(gogoproto.nullable) = false];
}

// IntWeightRange describes weight range that produce int value
message IntWeightRange {
  int64 Lower = 1;
  int64 Upper = 2;
  int64 Weight = 3;
}

// IntWeightTable describes weight loot table that produce int value
message IntWeightTable {
  repeated IntWeightRange WeightRanges = 1 [(gogoproto.nullable) = false];
}

// StringInputParam describes the bounds on an item input/output parameter of type string
message StringInputParam {
  string Key = 1;
  // The value of the parameter
  string Value = 2;
}
// StringInputParamList is a list of StringInputParam
message StringInputParamList {
  repeated StringInputParam List = 1 [(gogoproto.nullable) = false];
}
message FeeInputParam {
  int64 MinValue = 1;
  int64 MaxValue = 2;
}

// LongInputParam describes the bounds on an item input/output parameter of type int64
message LongInputParam {
  string Key = 1;
  int64 MinValue = 2;
  int64 MaxValue = 3;
}

// LongInputParamList is a list of LongInputParam
message  LongInputParamList {
  repeated LongInputParam List = 1 [(gogoproto.nullable) = false];
}

// ItemInput is a wrapper struct for Item for recipes
message ItemInput  {
  string ID = 1;
  DoubleInputParamList Doubles = 2 [(gogoproto.nullable) = false];
  LongInputParamList Longs = 3 [(gogoproto.nullable) = false];
  StringInputParamList Strings = 4 [(gogoproto.nullable) = false];
  FeeInputParam TransferFee = 5 [(gogoproto.nullable) = false];
}

message ItemInputList {
  repeated ItemInput List = 1 [(gogoproto.nullable) = false];
}

// WeightedOutputs is to make structs which is using weight to be based on
message  WeightedOutputs {
  repeated  string EntryIDs = 1;
  string Weight = 2;
}

// WeightedOutputsList is a struct to keep items which can be generated by weight;
// ItemOutput and CoinOutput is possible in current stage
message  WeightedOutputsList {
  repeated WeightedOutputs List = 1 [(gogoproto.nullable) = false];
}

// StringParam describes an item input/output parameter of type string
message StringParam {
  // The likelihood that this parameter is applied to the output item. Between 0.0 (exclusive) and 1.0 (inclusive).
  string Rate = 1 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  string Key = 2;
  string Value = 3;
  // When program is not empty, Value is ignored
  string Program = 4;
}

// StringParamList is a list of StringParam
message StringParamList {
  repeated StringParam List = 1 [(gogoproto.nullable) = false];
}

// DoubleParam describes the bounds on an item input/output parameter of type float64
message  DoubleParam  {
  // The likelihood that this parameter is applied to the output item. Between 0.0 (exclusive) and 1.0 (inclusive).
  string Rate = 1 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  string Key = 2;
  DoubleWeightTable WeightTable = 3 [(gogoproto.nullable) = false];
  // When program is not empty, DoubleWeightTable is ignored
  string Program = 4;
}

// DoubleParamList is a list of DoubleParam
message DoubleParamList {
  repeated DoubleParam List = 1 [(gogoproto.nullable) = false];
}


// ItemOutput models the continuum of valid outcomes for item generation in recipes
message ItemOutput {
  string ID = 1;
  DoubleParamList Doubles = 2 [(gogoproto.nullable) = false];
  LongParamList Longs = 3 [(gogoproto.nullable) = false];
  StringParamList Strings = 4 [(gogoproto.nullable) = false];
  int64 TransferFee = 5;
}

// ItemModifyOutput describes what is modified from item input
message ItemModifyOutput {
  string ID = 1;
  string ItemInputRef = 2;
  DoubleParamList Doubles = 3 [(gogoproto.nullable) = false];
  LongParamList Longs = 4 [(gogoproto.nullable) = false];
  StringParamList Strings = 5 [(gogoproto.nullable) = false];
  int64 TransferFee = 6;
}

// ItemModifyParams describes the fields that needs to be modified
message  ItemModifyParams {
  DoubleParamList Doubles = 1 [(gogoproto.nullable) = false];
  LongParamList Longs = 2 [(gogoproto.nullable) = false];
  StringParamList Strings = 3 [(gogoproto.nullable) = false];
  int64 TransferFee = 4;
}

// Item is a tradable asset
message  Item {
  SemVer NodeVersion = 1 [(gogoproto.nullable) = false];
  string ID = 2;
  DoubleKeyValueList Doubles = 3 [(gogoproto.nullable) = false];
  LongKeyValueList Longs = 4 [(gogoproto.nullable) = false];
  StringKeyValueList Strings = 5 [(gogoproto.nullable) = false];
  string CookbookID = 6;
  string Sender = 7;
  string OwnerRecipeID = 8;
  string OwnerTradeID = 9;
  bool Tradable = 10;
  int64 LastUpdate = 11;
  int64 TransferFee = 12;
}

// ItemList is a list of items
message  ItemList {
  repeated Item List = 1 [(gogoproto.nullable) = false];
}

message DoubleKeyValueList {
  repeated DoubleKeyValue List = 1 [(gogoproto.nullable) = false];
}

// DoubleKeyValue describes double key/value set
message  DoubleKeyValue {
  string Key = 1;
  string Value = 2 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
}

message LongKeyValueList {
  repeated LongKeyValue List = 1 [(gogoproto.nullable) = false];
}

// LongKeyValue describes long key/value set
message  LongKeyValue {
  string Key = 1;
  int64 Value = 2;
}

message StringKeyValueList {
  repeated StringKeyValue List = 1 [(gogoproto.nullable) = false];
}

// StringKeyValue describes string key/value set
message  StringKeyValue {
  string Key = 1;
  string Value = 2;
}

// TradeItemInput is a wrapper struct for Item for trades
message TradeItemInput {
  ItemInput ItemInput = 1 [(gogoproto.nullable) = false];
  string CookbookID = 2;
}

// TradeItemInputList is a list of ItemInputs for convinience
message TradeItemInputList {
  repeated TradeItemInput List = 1 [(gogoproto.nullable) = false];
}

// LockedCoinDescribe describes the locked coin struct
message  LockedCoinDescribe {
  string ID = 1;
  repeated cosmos.base.v1beta1.Coin Amount = 2 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}
// ShortenRecipe is a struct to manage shorten recipes
message ShortenRecipe  {
  string ID = 1;
  string CookbookID = 2;
  string Name = 3;
  string Description = 4;
  string Sender = 5;
}

message Execution{
  SemVer NodeVersion = 1 [(gogoproto.nullable) = false];
  string ID = 2;
  string RecipeID = 3;
  string CookbookID = 4;
  repeated cosmos.base.v1beta1.Coin CoinInputs = 5 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated Item ItemInputs = 6 [(gogoproto.nullable) = false];
  int64 BlockHeight = 7;
  string Sender = 8;
  bool Completed = 9;
}

message Recipe {
  SemVer NodeVersion = 1 [(gogoproto.nullable) = false];
  string ID = 2;
  string CookbookID = 3;
  string Name = 4;
  CoinInputList CoinInputs = 5 [(gogoproto.nullable) = false];
  ItemInputList ItemInputs = 6 [(gogoproto.nullable) = false];
  EntriesList Entries = 7 [(gogoproto.nullable) = false];
  WeightedOutputsList Outputs = 8 [(gogoproto.nullable) = false];
  string Description = 9;
  int64 BlockInterval = 10;
  string Sender = 11;
  bool Disabled = 12;
}

message Trade {
  SemVer NodeVersion = 1 [(gogoproto.nullable) = false];
  string ID = 2;
  CoinInputList CoinInputs = 3 [(gogoproto.nullable) = false];
  TradeItemInputList ItemInputs = 4 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin CoinOutputs = 5 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  ItemList ItemOutputs = 6 [(gogoproto.nullable) = false];
  string ExtraInfo = 7;
  string Sender = 8;
  string FulFiller = 9;
  bool Disabled = 10;
  bool Completed = 11;
}